# arpg_react

./: D4_FILTER_DECODE_SPIKE.md  D4_FILTER_SCHEMA.md  PROJECT.md  SESSION_2026-05-07.md  SESSION_2026-05-08.md  SESSION_2026-05-09.md  pyproject.toml
D4_FILTERS/: SPIKE_A_EMPTY  SPIKE_B_MIN  SPIKE_C_MULTI_COND  SPIKE_D_MULTI_RULE  SPIKE_E_AFFIX
arpg_react/: __main__.py  calibrator.py  config.py  context.py  daemon.py  editor_sync.py  hotkey.py  install.py  launcher.py  rules.py  skill_ocr.py
arpg_react/alerts/: __init__.py  audio.py  dispatcher.py  events.py  notify.py  scheduler.py  sounds.py  synth.py  tts.py
arpg_react/ipc/: __init__.py  messages.py  server.py
arpg_react/panel/: app.py  client.py  dialog.py  theme.py  widgets.py
arpg_react/sources/: __init__.py  base.py  clock.py  composite.py  helltides.py
arpg_react/timers/: __init__.py  core.py  helltide.py  legion.py  realmwalker.py  world_boss.py
arpg_react/watchers/: __init__.py  capture_remote.py  detector.py  detector_refs.py  diag.py  input_controller.py  pixel.py  polling.py  rule_engine.py  rule_engine_v2.py  setup.py
editor/: app.py
editor/static/: app.css  app.js  (+3 more)
tests/: test_composite_source.py  test_config.py  test_context.py  test_detector.py  test_dispatcher.py  test_helltide.py  test_helltides_source.py  test_input_controller.py  test_ipc.py  test_legion.py  test_pixel_watcher.py  test_realmwalker.py  test_resolution_scaling.py  test_rule_engine.py  test_rule_engine_v2.py  test_scheduler.py  test_skill_ocr.py  test_watcher_registry.py  test_world_boss.py
tools/: d4_filter_codec.py
